--- a/front/src/index.css
+++ b/front/src/index.css
@@ -114,7 +114,11 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
+
+    font-family: "Noto Sans Arabic", sans-serif;
+    font-optical-sizing: auto;
   }
 }
